fixed iOS input border visibility issue

--- a/pages/add-bag.module.css
+++ b/pages/add-bag.module.css
@@ -48,20 +48,23 @@
   margin-bottom: 2vh;
 
   padding: 0px;
-  padding-left: 2vw;
+  padding-left: 6px;
 
   height: 30px;
   width: 92vw;
 
+  background-color: white;
   color: #A47053;
 
   font-family: Roboto, sans-serif;
   font-size: 16px;
+  line-height: 16px;
 
-  border-radius: 2px;
-  border-style: none;
-  box-shadow: 0px 0px 0px 1px #A47053;
-
+  border-radius: 4px;
+  border-style: solid;
+  border-color: #A47053;
+  border-width: 1px;
+  
   display: flex;
   align-items: center;
   justify-content: left;
